k8s/pod-ssl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-ssl
  labels:
    app: dotnet-ssl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-ssl
  template:
    metadata:
      labels:
        app: dotnet-ssl
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - name: dotnet-ssl
          image: keithh.azurecr.io/dotnet-ssl:0.3
          volumeMounts:
          - name: secrets-store01-inline
            mountPath: "/certs"
            readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-workload-identity"
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-ssl
spec:
  ports:
  - name: https
    port: 443
    targetPort: 443
  selector:
    app: dotnet-ssl
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-ssl-https
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  labels:
    app: dotnet-ssl
spec:
  tls:
  - hosts:
    - dotnet-ssl.kizah.in
    secretName: dotnet-ssl-example
  ingressClassName: nginx
  rules:
    - host: dotnet-ssl.kizah.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-ssl # helloworld # dotnet-ssl
                port:
                  name: https
