k8s/pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: mcr.microsoft.com/azuredocs/aci-helloworld
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: helloworld
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-http
  labels:
    app: helloworld
spec:
  ingressClassName: nginx
  rules:
    - host: helloworld-http.kizah.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helloworld
                port:
                  name: http
